--- a/ide/ui/ide-listeners/src/main/resources/META-INF/dirigible/ide-listeners/view/listeners.html
+++ b/ide/ui/ide-listeners/src/main/resources/META-INF/dirigible/ide-listeners/view/listeners.html
@@ -9,74 +9,77 @@
   ~ SAP - initial API and implementation
   -->
 
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 
-<head>
-    <meta charset="utf-8"/>
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Eclipse Dirigible - Listeners</title>
+        <link rel="icon" sizes="any" href="data:;base64,iVBORw0KGgo=">
 
-    <link href="/webjars/fontawesome/4.7.0/css/font-awesome.min.css" type="text/css" rel="stylesheet">
+        <title>Eclipse Dirigible - Listeners</title>
 
-    <!-- AngularJS -->
-    <script src="/webjars/angularjs/1.8.2/angular.min.js"></script>
-    <script src="/webjars/angularjs/1.8.2/angular-resource.min.js"></script>
+        <link href="/webjars/fontawesome/4.7.0/css/font-awesome.min.css" type="text/css" rel="stylesheet">
 
-    <!-- jQuery -->
-    <script src="/webjars/jquery/3.4.1/jquery.min.js"></script>
+        <!-- AngularJS -->
+        <script type="text/javascript" src="/webjars/angularjs/1.8.2/angular.min.js"></script>
+        <script type="text/javascript" src="/webjars/angularjs/1.8.2/angular-resource.min.js"></script>
 
-    <!-- Twitter Bootstrap with Theme Support -->
-    <link rel="stylesheet" href="/services/v4/js/theme/resources.js/bootstrap.min.css">
-    <script src="/webjars/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+        <!-- jQuery -->
+        <script type="text/javascript" src="/webjars/jquery/3.4.1/jquery.min.js"></script>
 
-    <script src="/services/v4/web/ide-core/ui/message-hub.js"></script>
-    <script src="listeners.js"></script>
+        <!-- Twitter Bootstrap with Theme Support -->
+        <link rel="stylesheet" href="/services/v4/js/theme/resources.js/bootstrap.min.css">
+        <script type="text/javascript" src="/webjars/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
-    <!-- Custom IDE Styles -->
-    <link type="text/css" rel="stylesheet" href="/services/v4/js/theme/resources.js/ide.css"/>
+        <script type="text/javascript" src="/services/v4/web/ide-core/ui/message-hub.js"></script>
+        <script type="text/javascript" src="listeners.js"></script>
 
-</head>
+        <!-- Custom IDE Styles -->
+        <link type="text/css" rel="stylesheet" href="/services/v4/js/theme/resources.js/ide.css" />
 
-<body ng-app="listeners" ng-controller="ListenersController as listeners" class="view">
-<div class="tableFixHead">
-    <table class="table table-striped" ng-cloak>
-        <thead>
-        <tr>
-            <th>Name</th>
-            <th>Location</th>
-            <th>Handler</th>
-            <th>Description</th>
-            <th width="50px">Type</th>
-            <th width="180px">Created</th>
-            <th width="150px">Creator</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr ng-repeat="next in listenersList">
-            <td>
-                <div class="tdSingleLine">{{next.name}}</div>
-            </td>
-            <td>
-                <div class="tdSingleLine">{{next.location}}</div>
-            </td>
-            <td>
-                <div class="tdSingleLine">{{next.handler}}</div>
-            </td>
-            <td>
-                <div class="tdSingleLine">{{next.description}}</div>
-            </td>
-            <td width="50px"><i class="fa fa-mail-reply" ng-show="{{next.type === 'Q'}}"></i><i
-                    class="fa fa-mail-reply-all" ng-hide="{{next.type === 'T'}}"></i></td>
-            <td width="180px">
-                <div class="tdSingleLine">{{next.createdAt}}</div>
-            </td>
-            <td width="150px">
-                <div class="tdSingleLine">{{next.createdBy}}</div>
-            </td>
-        </tr>
-        </tbody>
-    </table>
-</div>
-</body>
+    </head>
+
+    <body ng-app="listeners" ng-controller="ListenersController as listeners" class="view">
+        <div class="tableFixHead">
+            <table class="table table-striped" ng-cloak>
+                <thead>
+                    <tr>
+                        <th>Name</th>
+                        <th>Location</th>
+                        <th>Handler</th>
+                        <th>Description</th>
+                        <th width="50px">Type</th>
+                        <th width="180px">Created</th>
+                        <th width="150px">Creator</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr ng-repeat="next in listenersList">
+                        <td>
+                            <div class="tdSingleLine">{{next.name}}</div>
+                        </td>
+                        <td>
+                            <div class="tdSingleLine">{{next.location}}</div>
+                        </td>
+                        <td>
+                            <div class="tdSingleLine">{{next.handler}}</div>
+                        </td>
+                        <td>
+                            <div class="tdSingleLine">{{next.description}}</div>
+                        </td>
+                        <td width="50px"><i class="fa fa-mail-reply" ng-show="{{next.type === 'Q'}}"></i><i
+                                class="fa fa-mail-reply-all" ng-hide="{{next.type === 'T'}}"></i></td>
+                        <td width="180px">
+                            <div class="tdSingleLine">{{next.createdAt}}</div>
+                        </td>
+                        <td width="150px">
+                            <div class="tdSingleLine">{{next.createdBy}}</div>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </body>
 
 </html>
