--- a/ide/ui/ide-plugins/src/main/resources/META-INF/dirigible/ide-plugins/views/plugins/index.html
+++ b/ide/ui/ide-plugins/src/main/resources/META-INF/dirigible/ide-plugins/views/plugins/index.html
@@ -11,67 +11,68 @@
 
 <html lang="en" ng-app="plugins">
 
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Eclipse Dirigible &trade; | Plugins </title>
+        <link rel="icon" sizes="any" href="data:;base64,iVBORw0KGgo=">
 
-    <link rel="shortcut icon" type="image/png" href="/services/v4/web/resources/images/favicon.png"/>
+        <title>Eclipse Dirigible &trade; | Plugins </title>
 
-    <!-- FontAwesome icon set -->
-    <link type="text/css" href="/webjars/fontawesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+        <!-- FontAwesome icon set -->
+        <link type="text/css" href="/webjars/fontawesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 
-    <!-- Twitter Bootstrap with Theme Support -->
-    <link type="text/css" rel="stylesheet" href="/services/v4/js/theme/resources.js/bootstrap.min.css">
+        <!-- Twitter Bootstrap with Theme Support -->
+        <link type="text/css" rel="stylesheet" href="/services/v4/js/theme/resources.js/bootstrap.min.css">
 
-    <!-- Custom IDE Styles -->
-    <link type="text/css" rel="stylesheet" href="/services/v4/js/theme/resources.js/ide.css"/>
+        <!-- Custom IDE Styles -->
+        <link type="text/css" rel="stylesheet" href="/services/v4/js/theme/resources.js/ide.css" />
 
-    <script type="text/javascript" src="/webjars/angularjs/1.8.2/angular.min.js"></script>
-    <script type="text/javascript" src="/webjars/angularjs/1.8.2/angular-resource.min.js"></script>
+        <script type="text/javascript" src="/webjars/angularjs/1.8.2/angular.min.js"></script>
+        <script type="text/javascript" src="/webjars/angularjs/1.8.2/angular-resource.min.js"></script>
 
-</head>
+    </head>
 
-<body ng-controller="PluginsController">
-<div class="container">
-    <div ng-repeat="next in depots">
-        <h4>
-            <label>Depot:</label> <a href="{{next.depot}}" title="{{next.depot}}" target="_blank">{{next.name}}</a>
-        </h4>
-        <h4>
-            <i>{{next.description}}</i>
-        </h4>
-        <hr>
-        <td>
-            <table class="table table-striped">
-                <thead>
-                <tr>
-                    <th>#</th>
-                    <th>Name</th>
-                    <th>Version</th>
-                    <th>Action</th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr ng-repeat="plugin in next.plugins">
-                    <td>{{$index + 1}}</td>
-                    <td><a href="{{plugin.site}}" title="{{plugin.description}}"
-                           target="_blank">{{plugin.name}}</a></td>
-                    <td>{{plugin.version}}</td>
-                    <td><a class="btn btn-primary btn-xs"
-                           href="/services/v4/web/ide-git/index.html?repository={{plugin.repository}}"
-                           title="Install {{plugin.name}}" target="_blank">install</a></td>
-                </tr>
-                </tbody>
-            </table>
-        </td>
-    </div>
-</div>
+    <body ng-controller="PluginsController">
+        <div class="container">
+            <div ng-repeat="next in depots">
+                <h4>
+                    <label>Depot:</label> <a href="{{next.depot}}" title="{{next.depot}}"
+                        target="_blank">{{next.name}}</a>
+                </h4>
+                <h4>
+                    <i>{{next.description}}</i>
+                </h4>
+                <hr>
+                <td>
+                    <table class="table table-striped">
+                        <thead>
+                            <tr>
+                                <th>#</th>
+                                <th>Name</th>
+                                <th>Version</th>
+                                <th>Action</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr ng-repeat="plugin in next.plugins">
+                                <td>{{$index + 1}}</td>
+                                <td><a href="{{plugin.site}}" title="{{plugin.description}}"
+                                        target="_blank">{{plugin.name}}</a></td>
+                                <td>{{plugin.version}}</td>
+                                <td><a class="btn btn-primary btn-xs"
+                                        href="/services/v4/web/ide-git/index.html?repository={{plugin.repository}}"
+                                        title="Install {{plugin.name}}" target="_blank">install</a></td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </td>
+            </div>
+        </div>
 
-<script>
-    angular.module('plugins', [])
+        <script>
+            angular.module('plugins', [])
         .controller('PluginsController', function ($scope, $http) {
 
             let pluginsApi = 'https://www.dirigible.io/depots.json';
@@ -91,7 +92,7 @@
 
             loadPlugins();
         });
-</script>
-</body>
+        </script>
+    </body>
 
 </html>
