--- a/resources/resources-theme-fiori/src/main/resources/META-INF/dirigible/theme-fiori/monaco.css
+++ b/resources/resources-theme-fiori/src/main/resources/META-INF/dirigible/theme-fiori/monaco.css
@@ -44,3 +44,8 @@ body {
   border: 1px solid #d5d7d7;
   border-radius: 4px;
 }
+.monacoLineDecoration {
+  background: skyblue;
+  width: 3px !important;
+  margin-left: 5px;
+}
