--- a/resources/resources-theme-fiori/src/main/resources/META-INF/dirigible/theme-fiori/ide.css
+++ b/resources/resources-theme-fiori/src/main/resources/META-INF/dirigible/theme-fiori/ide.css
@@ -727,3 +727,31 @@ a.ui-button:active,
   /* For context menu */
   margin-bottom: 32px;
 }
+.loading-overview.hide {
+  display: none !important;
+}
+.loading-overview {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 14px;
+  position: absolute;
+  margin: 0;
+  padding: 0;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  z-index: 1000;
+  background-color: rgba(255, 255, 255, 0.6);
+}
+.loading-overview>.loading-message {
+  background-color: white;
+  color: black;
+  padding: 6px 10px;
+  border: 1px solid #d5d7d7;
+  border-radius: 4px;
+}
